assets/sass/styles.scss
html {
  font-size: 62.5%;
  color: var(--color-onLight);
}

body {
  background-color: var(--bg-neutral);
  font-size: 1.8rem;
  overflow-x: hidden;
}

a:not(.m-teaser) {
  color: var(--link-default);
  transition: all 0.3s ease;
  text-underline-offset: .2rem;

  &:hover,
  &:focus {
    color: var(--link-hovered);

    svg {
      fill: var(--link-hovered);
    }
  }

  svg {
    fill: var(--link-default);
    transition: fill 0.3s ease;
  }
}

//space for fixed header
main {
  margin-top: 8rem;
}

.container.o-list:not(.o-list--news) {
  background-color: var(--bg-default);
  border-radius: var(--border-radius-l);
  padding: 2rem;
}

main > .container:is(.o-single--with-sidemenu) {
  background-color: unset;
  padding: 0;

  display: grid;
  grid-template-columns: 1fr 2fr;
  gap: 1.5rem;

  @media (max-width: #{$breakpoint-lg}) {
    display: flex;
    flex-direction: column;
  }
}

img {
  width: 100%;
  height: auto;
  border-radius: var(--border-radius-l);
}

.o-list__picture {
  margin-right: 1.2rem;
}

.o-related__operator-wrapper > .o-related__list {
  display: flex;
  flex-wrap: wrap;
  margin-bottom: 0;
  padding-left: 0;
  column-gap: 4rem;
  row-gap: 1rem;
  list-style-type: none;

  li > a {
    display: flex;
    gap: 1rem;
    align-items: center;
  }
}

.o-related__date {
  margin-left: 2.4rem;
}

.o-list__link {
  display: flex;
  align-items: center;
  margin-bottom: 1rem;
}

.container {
  @media (max-width: #{$breakpoint-sm}) {
    max-width: calc(100% - 3.2rem);
  }
}

.o-single {
  padding: 2rem;
  background-color: var(--bg-default);
  border-radius: var(--border-radius-l);

  &--with-sidemenu {
    padding: 0;
    background-color: inherit;
  }

  &__container {
    background-color: var(--bg-default);
    padding: 2rem;
    border-radius: var(--border-radius-l);
  }

  &__content {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;

    p {
        text-align: justify;
    }
  }

  &__news-image {
    margin-bottom: 1.6rem;

    @media (min-width: #{$breakpoint-lg}) {
      display: none;
    }
  }

  &__content-header {
    display: flex;
    justify-content: space-between;
    flex-flow: wrap;
    column-gap: 2rem;
    row-gap: 1rem;
    margin-bottom: 1.6rem;
    align-items: center;

    h1 {
      margin-bottom: 0;
    }

    img {
      max-height: 3.6rem;
      width: auto;
      border-radius: var(--border-radius-m);
    }
  }

  &__content-header-title {
    display: flex;
    align-items: center;
    gap: 1.5rem;
  }

  &__news-image {
    margin-bottom: 1.6rem;

    @media (min-width: #{$breakpoint-lg}) {
      display: none;
    }
  }
}

.pagefind-highlight {
  padding: 0;
}

.sr-only {
  opacity: 0;
  position: absolute;
}

.a-flag {
  height: 2rem;
  width: auto;
}

.o-startpage .row {
  margin-bottom: 2.5rem;
}

.o-startpage__intro {
  text-wrap: balance;
  margin-bottom: 2rem;
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 2rem;

  @media (max-width: #{$breakpoint-md}) {
    display: flex;
    flex-direction: column;
  }

  h2 {
    font-family: Sansita,Arial,Helvetica,sans-serif;
    font-weight: 800;
    font-size: 6.2rem;
    line-height: 1.1;
  }

  > div {
    align-content: center;
  }

  @media (max-width: #{$breakpoint-md}) {
    h2 {
      font-size: 4.8rem;
    }
  }
}

.o-startpage__image {
  @media (max-width: #{$breakpoint-md}) {
    display: none;
  }
}

.o-startpage__shortcut-wrapper {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 3fr;
    gap: 2rem;
    margin-bottom: 2rem;

    @media (max-width: #{$breakpoint-md}) {
      display: flex;
      flex-wrap: wrap;
      gap: 1rem;
    }

}

.o-startpage__search {
  margin-bottom: 2rem;
  width: 100%;
}

